<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.common.activities.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_mob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_200dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:padding="@dimen/dimen_5dp"
            app:hintEnabled="true"

            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_lgn_mobile_number_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mobile"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/dimen_15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_input_mob"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:padding="@dimen/dimen_5dp"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_mob">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_10dp"
                android:hint="@string/enter_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/dimen_15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_input_password"
            android:layout_margin="@dimen/dimen_30dp"
            android:background="@drawable/app_button"
            android:clickable="true"
            android:elevation="@dimen/dimen_5dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20sp"
            android:translationZ="5dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_password" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_notreg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_100dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/not_register"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tv_register"
            app:layout_constraintEnd_toStartOf="@+id/tv_register"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_register" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_login"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_100dp"
            android:background="@drawable/reg_button"
            android:elevation="@dimen/dimen_5dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/actv_notreg"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <View
            android:id="@+id/viewOne"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/actv_or"
            app:layout_constraintEnd_toStartOf="@+id/actv_or"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register"
            app:layout_constraintTop_toTopOf="@+id/actv_or" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/actv_or"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="OR"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_25sp"
            app:layout_constraintEnd_toStartOf="@+id/viewTwo"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toEndOf="@+id/viewOne"
            app:layout_constraintTop_toBottomOf="@+id/tv_register" />

        <View
            android:id="@+id/viewTwo"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_marginEnd="@dimen/dimen_30dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/actv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/actv_or"
            app:layout_constraintTop_toBottomOf="@+id/tv_register"
            app:layout_constraintTop_toTopOf="@+id/actv_or" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aciv_google"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toStartOf="@+id/aciv_facebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actv_or" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aciv_facebook"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:src="@drawable/ic_facebook_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/aciv_google"
            app:layout_constraintTop_toBottomOf="@+id/actv_or" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>